src/objects/ProgramFeedback__c.object
<CustomObject>
    <description>Item to house course and other product information gathered from feedback forms.</description>
    <fields>
        <fullName>CUsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are the CUs affected by this change?</inlineHelpText>
        <label>CUs Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommunicationPlan__c</fullName>
        <inlineHelpText>Is there any communication before or after?</inlineHelpText>
        <label>Communication Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CourseChangesNeeded__c</fullName>
        <inlineHelpText>Does the change warrant other changes to the course (e.g., rubric, evaluation notes)?</inlineHelpText>
        <label>Course Changes Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DateClosed__c</fullName>
        <description>Date the record was closed</description>
        <inlineHelpText>Date the record was closed</inlineHelpText>
        <label>DateClosed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DegreeProgram__c</fullName>
        <description>Submitting User&apos;s Degree Program</description>
        <formula>OriginalFeedbackSubmitter__r.Contact.WGUDegreeProgram__r.Name</formula>
        <inlineHelpText>Submitting User&apos;s Degree Program</inlineHelpText>
        <label>Degree Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Feedback description details</description>
        <inlineHelpText>Feedback description details</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DuplicateOfRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Feedback object of which this record is a duplicate.</description>
        <inlineHelpText>The Product Feedback object of which this record is a duplicate.</inlineHelpText>
        <label>Duplicate of Record</label>
        <referenceTo>ProgramFeedback__c</referenceTo>
        <relationshipName>ProductFeedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Resources__c</fullName>
        <description>Any Teams that are needed as a resource to help with this issue.</description>
        <label>External Resources</label>
        <picklist>
            <picklistValues>
                <fullName>E-Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedDate__c</fullName>
        <description>The date which the record was added to the legacy system</description>
        <inlineHelpText>The date which the record was added to the legacy system</inlineHelpText>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location where the change will occur</description>
        <inlineHelpText>Please describe where this change should occur. If CoS change, please provide both the subject and topic as listed in the course menu of the course of study.</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OriginalFeedbackSubmitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that originally submitted the feedback</description>
        <inlineHelpText>The user that originally submitted the feedback</inlineHelpText>
        <label>Original Feedback Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProductFeedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherCoursesAffected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are there any other courses affected by this change?</inlineHelpText>
        <label>Other Courses Affected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of the feedback</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <defaultValue>&apos;Program Feedback Triage&apos;</defaultValue>
        <description>Last queue to which this record was assigned</description>
        <inlineHelpText>Last queue to which this record was assigned</inlineHelpText>
        <label>Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status or stage of processing the feedback</description>
        <inlineHelpText>The status or stage of processing the feedback</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - No Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Future Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Scheduled Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Vendor Reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <description>Banner ID from the submitting user&apos;s contact record</description>
        <formula>OriginalFeedbackSubmitter__r.Contact.StudentID__c</formula>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMentorEmail__c</fullName>
        <description>Submitting User&apos;s Mentor&apos;s Email</description>
        <formula>OriginalFeedbackSubmitter__r.Contact.Mentor__r.Email</formula>
        <inlineHelpText>Submitting User&apos;s Mentor&apos;s Email</inlineHelpText>
        <label>Student Mentor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMentor__c</fullName>
        <description>Submitting User&apos;s Mentor</description>
        <formula>OriginalFeedbackSubmitter__r.Contact.Mentor__r.FirstName &amp; &apos; &apos; &amp; OriginalFeedbackSubmitter__r.Contact.Mentor__r.LastName</formula>
        <inlineHelpText>Submitting User&apos;s Mentor</inlineHelpText>
        <label>Student Mentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentPhone__c</fullName>
        <formula>OriginalFeedbackSubmitter__r.Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentsAffected__c</fullName>
        <inlineHelpText>Approximate Number of Students Affected</inlineHelpText>
        <label>Students Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Less Than 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-199</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200-349</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350-499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Than 500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubmitterFirstName__c</fullName>
        <description>Submitter&apos;s First Name</description>
        <formula>OriginalFeedbackSubmitter__r.FirstName</formula>
        <inlineHelpText>Submitter&apos;s First Name</inlineHelpText>
        <label>Submitter First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterLastName__c</fullName>
        <description>Submitter&apos;s Last Name</description>
        <formula>OriginalFeedbackSubmitter__r.LastName</formula>
        <inlineHelpText>Submitter&apos;s Last Name</inlineHelpText>
        <label>Submitter Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterRole__c</fullName>
        <description>The user role of the person that submitted the feedback</description>
        <label>Submitter Role</label>
        <picklist>
            <picklistValues>
                <fullName>CM Maintenance SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor/Mentor Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Mentor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Subtype of feedback</description>
        <label>Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Assessment - Caseload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment - Coaching report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment – Content issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment - Exam item(s) needs to be reviewed for accuracy.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment - Exam needs to be reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment - Grammar errors or typos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment - Need to update the 3rd party exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment – Order of tasks issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment - Preassessment Content Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment preparation box not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment – Rubric details issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment - Task instructions issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoS  - Activity instructions issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COS - Arrangement of CoS issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoS - Broken links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoS - Contact a Course Mentor Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoS – Content issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoS - Grammar errors or typos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoS - Portal Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoS – Upgrade suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course CU Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course - QA Review Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course - QA Review CoS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course - QA Review Learning Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course - Quality and Maintenance Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation - Guided Protocol Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation - Layered Feedback Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation - Object Exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation - Performance Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation - Pilot Feedback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Age_in_days__c</fullName>
        <description>This Field will help calculate the difference of the number of days &quot;date created&quot; - &quot;today&quot; until there is a date closed on the ticket. If there is a date closed it stops calculating. If a date closed is removed it will start re-calculating. We need it to update automatically not only when record is edited.</description>
        <formula>IF(ISPICKVAL(Status__c , &quot;Open&quot; ), ROUND(NOW()-CreatedDate, 0), 
IF(ISPICKVAL(Status__c , &quot;In Progress&quot; ), ROUND(NOW()-CreatedDate, 0), 
IF(ISPICKVAL(Status__c , &quot;Reopened&quot; ), ROUND(NOW()-CreatedDate, 0), 
IF(ISPICKVAL(Status__c , &quot;Duplicate&quot; ), ROUND(NOW()-CreatedDate, 0),
IF(ISPICKVAL(Status__c , &quot;For Future Development&quot; ), ROUND(NOW()-CreatedDate, 0),
IF(ISPICKVAL(Status__c , &quot;Pending Vendor Reply&quot; ), ROUND(NOW()-CreatedDate, 0),
IF(ISPICKVAL(Status__c , &quot;Pending Scheduled Release&quot; ), ROUND(NOW()-CreatedDate, 0),
IF(ISPICKVAL(Status__c , &quot;Closed&quot; ), ROUND(DateClosed__c-CreatedDate, 0), 
IF(ISPICKVAL(Status__c , &quot;Closed - No Action required&quot; ), ROUND(DateClosed__c-CreatedDate, 0),
IF(ISPICKVAL(Status__c , &quot;Legacy Closed&quot; ), ROUND(DateClosed__c-CreatedDate, 0), NULL))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Age in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <description>Submitting User&apos;s Timezone</description>
        <formula>OriginalFeedbackSubmitter__r.Contact.Timezone__c</formula>
        <inlineHelpText>Submitting User&apos;s Timezone</inlineHelpText>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of change required</description>
        <inlineHelpText>Type of change required</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fast Lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Praise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teach the Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WGUCourseName__c</fullName>
        <description>Free-text field for use on the entry form to self-report the course code</description>
        <inlineHelpText>Free-text field for use on the entry form to self-report the course code</inlineHelpText>
        <label>WGU Course Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The course to which the feedback is tied</description>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipName>ProductFeedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Priority__c</columns>
        <columns>College__c</columns>
        <columns>OriginalFeedbackSubmitter__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AssessmentMaintenanceFeedbackOpen</fullName>
        <booleanFilter>(1 OR 2) AND 3 and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Ticket_Age_in_days__c</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>assessment maintenance</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>assessment maintenance</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Open,Pending Scheduled Release,Pending Vendor Reply,Reopened</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Fast Lane,Minor Enhancement</value>
        </filters>
        <label>Assessment Maintenance Feedback Open</label>
        <sharedTo>
            <group>AssessmentMaintenance</group>
            <group>ProgramFeedbackManagement</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AssessmentMaintenance_Feedback</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>assessment maintenance</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>assessment maintenance</value>
        </filters>
        <label>Assessment Maintenance Feedback</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assessment_Maint_Feedback_Major_Open</fullName>
        <booleanFilter>(1 OR 2) AND 3 and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Ticket_Age_in_days__c</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>assessment maintenance</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>assessment maintenance</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Open,Pending Scheduled Release,Pending Vendor Reply,Reopened</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Major Enhancement</value>
        </filters>
        <label>Assessment Maint. Feedback Open Major</label>
        <sharedTo>
            <group>AssessmentMaintenance</group>
            <group>ProgramFeedbackManagement</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CoSFeedback</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>Subtype__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>CoS</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>CoS</value>
        </filters>
        <label>CoS Feedback</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CoSFeedbackOpen</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>Subtype__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>CoS</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>Cos</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Open,Pending Scheduled Release,Pending Vendor Reply,Reopened</value>
        </filters>
        <label>CoS Feedback Open</label>
        <sharedTo>
            <group>CoS_Group</group>
            <group>InstructionalDesignFeedback</group>
            <group>ProgramFeedbackManagement</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CourseMentorFeedback</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>Subtype__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>General Education</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Open,Pending Scheduled Release,Pending Vendor Reply,Reopened</value>
        </filters>
        <label>Course Mentor Feedback GE Open</label>
        <sharedTo>
            <group>CourseMentorSubjectMatterExperts</group>
            <group>ProgramFeedbackManagement</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CourseMentorFeedbackAll</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>Subtype__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <label>Course Mentor Feedback</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CourseMentorFeedbackBSHIOpen</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4 AND (5 OR 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>Subtype__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Health Professions</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Open,Pending Scheduled Release,Pending Vendor Reply,Reopened</value>
        </filters>
        <filters>
            <field>WGUCourse__c</field>
            <operation>contains</operation>
            <value>EAV1,CLC1,BNC1,CTC1,CWC1,BBT1,EBV1,DGV1,CVV1,BDT1,MGC1,QST1,BFT1</value>
        </filters>
        <filters>
            <field>WGUCourse__c</field>
            <operation>contains</operation>
            <value>TPV1,BGT1,DNV1,RYT1,BNT1,CWHJ</value>
        </filters>
        <label>Course Mentor Feedback BSHI Open</label>
        <sharedTo>
            <group>CourseMentorSubjectMatterExperts</group>
            <group>ProgramFeedbackManagement</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CourseMentorFeedbackCoBOpen</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>Subtype__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Open,Pending Scheduled Release,Pending Vendor Reply,Reopened</value>
        </filters>
        <label>Course Mentor Feedback CoB Open</label>
        <sharedTo>
            <group>CourseMentorSubjectMatterExperts</group>
            <group>ProgramFeedbackManagement</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CourseMentorFeedbackHPOpen</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>College__c</columns>
        <columns>WGUCourse__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>SubmitterRole__c</columns>
        <columns>Subtype__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>course mentor</value>
        </filters>
        <filters>
            <field>College__c</field>
            <operation>equals</operation>
            <value>Health Professions</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Open,Pending Scheduled Release,Pending Vendor Reply,Reopened</value>
        </filters>
        <label>Course Mentor Feedback HP Open</label>
        <sharedTo>
            <group>CourseMentorSubjectMatterExperts</group>
            <group>ProgramFeedbackManagement</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
</CustomObject>